src/main/java/com/example/friendsletter/errors/LETTER_ERROR_STATUS.java
package com.example.friendsletter.errors;

public enum LETTER_ERROR_STATUS {
    NOT_FOUND,
    NOT_PUBLIC,
    EXPIRED,
    HAS_BEEN_READ,
    MESSAGE_NOT_FOUND
}